--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
       rel="stylesheet"
     />
     <link
-      href="http://fonts.googleapis.com/css?family=Gloria+Hallelujah"
+      href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap"
       rel="stylesheet"
+    />
     />
   </head>
   <body>
