Fixed bug index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
       href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap"
       rel="stylesheet"
     />
-    />
   </head>
   <body>
     <div id="grid-container">
@@ -43,7 +42,7 @@
         <div id="container"></div>
       </div>
 
-      <button id="reload"><img alt="Refresh" /></button>
+      <button id="reload">Refresh</button>
 
       <div id="output"></div>
     </div>
